[i18n] idea-ui
This patch fixes the notes from the code review

Signed-off-by: Nikita Eshkeev <nikita.eshkeev@jetbrains.com>

GitOrigin-RevId: d7260b6aaf2a7a429aeb2a521bbad55127f7b137